--- a/taulaPokemon.html
+++ b/taulaPokemon.html
@@ -32,12 +32,22 @@
       <!-- Comentari, per crear una nova línia copiar totes les línies que van des de <tr> fins a </tr> -->
       <tr>
         <td>
-          <a href="johto/johto.html">
-            <h2>Johto</h2>
+          <a href="Jhoto/hoenn.html">
+            <h2>Jhoto</h2>
           </a>
         </td>
         <td>
           <strong>50</strong>
+        </td>
+      </tr>
+	  <tr>
+        <td>
+          <a href="hoenn/hoenn.html">
+            <h2>hoenn</h2>
+          </a>
+        </td>
+        <td>
+          <strong>500</strong>
         </td>
       </tr>
       <!-- Fins aquí -->
